--- a/Rogue Arts Website/css/about_us.css
+++ b/Rogue Arts Website/css/about_us.css
@@ -1,5 +1,6 @@
 body {	/* Sets minumum width for the screen */
 	min-width: 520px;
+	font-size: 20px;
 }
 
 .navbar-nav li a:hover {  /* Causes the links on the navbar to turn a light blue colour when hovered over */
@@ -11,12 +12,36 @@ body {	/* Sets minumum width for the screen */
     float:none;
 }
 
+.fa { /* sets general layout of social media icons, also makes them round */
+ 	padding: 20px;
+	font-size: 25px;
+	height: 60px;
+  	width: 60px;
+  	text-align: center;
+	text-decoration: none !important; 
+  	border-radius: 50%;
+}
+
+.fa-facebook{ /* gives iconic facebook background */
+	background-color: #3B5998;
+	color: white;
+}
+
+.fa-twitter { /* gives iconic twitter background */
+  	background: #55ACEE;
+  	color: white;
+}
+
 #intro_container { /* Sets padding for page content */
 	padding-left: 4%;
 }
 
 #team_container {
 	padding-left: 6%;
+}
+
+#navbar_logo{ /* centres team logo */
+	margin-left: 27%;
 }
 
 hr {   /* Gives horizontal rows a different border */
